# ConsoleInQt

./: CMakeLists.txt  Console.cpp  Console.h  ConsoleInQt_global.h  LICENSE  README.md
.github/workflows/: test.yml
